--- a/vncserver.service
+++ b/vncserver.service
@@ -6,7 +6,7 @@ After=multi-user.target
 User=user
 WorkingDirectory=/home/user
 Type=forking
-ExecStart=/usr/bin/vncserver -geometry 1280x720 -depth 24 :1 
+ExecStart=/usr/bin/vncserver -localhost yes -geometry 1280x720 -depth 24 :1 
 ExecStop=/usr/bin/vncserver -kill :1
 Restart=on-failure
 
