--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,7 +1,8 @@
 setw -g mode-keys vi
 set -sg escape-time 0
 
-set -g status-right 'k8s: #(kubectl config current-context) / #(kubectl config view --minify --output "jsonpath={..namespace}")'
+set -g status-right '#(kubectl config current-context)'
+#/ #(kubectl config view --minify --output "jsonpath={..namespace}")'
 #set -g status-left '#(basename "$(pwd)")'
 set -g automatic-rename on
 set -g automatic-rename-format '#{b:pane_current_path}'
