--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -25,3 +25,7 @@ bind l select-pane -R
 #default status line off (but with switch)
 #set-option -g status off
 bind-key t set-option status
+
+# split window with current path
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
